--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,118 @@
-matplotlib
-pandas
-seaborn
-selenium
-umap-learn
-webdriver-manager
-imblearn
-tqdm
-ipywidgets
-plotly
-scikit-learn
-scikit-survival
+anyio==3.3.4
+argon2-cffi==21.1.0
+async-generator==1.10
+attrs==21.2.0
+Babel==2.9.1
+backcall==0.2.0
+black==21.11b1
+bleach==4.1.0
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.7
+click==8.0.3
+colorama==0.4.4
+configparser==5.0.2
+crayons==0.4.0
+cryptography==35.0.0
+cycler==0.11.0
+debugpy==1.5.0
+decorator==5.1.0
+defusedxml==0.7.1
+ecos==2.0.7.post1
+entrypoints==0.3
+fonttools==4.28.3
+h11==0.12.0
+idna==3.3
+imbalanced-learn==0.8.1
+imblearn==0.0
+ipykernel==6.4.1
+ipython==7.28.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.5
+jedi==0.18.0
+Jinja2==3.0.2
+joblib==1.1.0
+json5==0.9.6
+jsonschema==4.1.2
+jupyter-client==7.0.6
+jupyter-core==4.8.1
+jupyter-server==1.11.1
+jupyterlab==3.2.1
+jupyterlab-code-formatter==1.4.10
+jupyterlab-pygments==0.1.2
+jupyterlab-server==2.8.2
+jupyterlab-widgets==1.0.2
+kiwisolver==1.3.2
+llvmlite==0.37.0
+MarkupSafe==2.0.1
+matplotlib==3.5.0
+matplotlib-inline==0.1.3
+mistune==0.8.4
+mypy-extensions==0.4.3
+nb-black==1.0.7
+nbclassic==0.3.4
+nbclient==0.5.4
+nbconvert==6.2.0
+nbformat==5.1.3
+nest-asyncio==1.5.1
+notebook==6.4.5
+numba==0.54.1
+numexpr==2.8.0
+numpy==1.20.3
+osqp==0.6.2.post0
+outcome==1.1.0
+packaging==21.2
+pandas==1.3.4
+pandocfilters==1.5.0
+parso==0.8.2
+pathspec==0.9.0
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.4.0
+platformdirs==2.4.0
+plotly==5.4.0
+prometheus-client==0.12.0
+prompt-toolkit==3.0.20
+ptyprocess==0.7.0
+pycparser==2.20
+Pygments==2.10.0
+pynndescent==0.5.5
+pyOpenSSL==21.0.0
+pyparsing==2.4.7
+pyrsistent==0.18.0
+python-dateutil==2.8.2
+pytz==2021.3
+pyzmq==22.3.0
+qdldl==0.1.5.post0
+regex==2021.11.10
+requests==2.26.0
+requests-unixsocket==0.2.0
+scikit-learn==0.24.2
+scikit-survival==0.16.0
+scipy==1.7.1
+seaborn==0.11.2
+selenium==4.1.0
+Send2Trash==1.8.0
+setuptools-scm==6.3.2
+six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
+tenacity==8.0.1
+terminado==0.12.1
+testpath==0.5.0
+threadpoolctl==3.0.0
+tomli==1.2.2
+tornado==6.1
+tqdm==4.62.3
+traitlets==5.1.0
+trio==0.19.0
+trio-websocket==0.9.2
+typing_extensions==4.0.1
+umap-learn==0.5.2
+urllib3==1.26.7
+wcwidth==0.2.5
+webdriver-manager==3.5.2
+webencodings==0.5.1
+websocket-client==1.2.1
+widgetsnbextension==3.5.2
+wsproto==1.0.0
